# Blissify

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  client.sh  main_args.c  main_mpd.c
client/: build_cache.py  client.py
include/: analysis.h  cmdline.h  constants.h  utilities.h
mpd/: client.py  requirements.txt  server.py
scripts/: build_cache.py
src/: .main.c.swp  analysis.c  args.ggo  cmdline.c  main.c  utilities.c
